[package]
name = "grid"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
iced = { version = "0.9.0", features = ["image"] }
iced_native = "0.10.3"
ignore = "0.4.20"
itertools = "0.10.5"
libraw_r = { version = "0.8.10", features = ["bindgen"], registry = "ktra" }
once_cell = { version = "1.18.0", features = ["parking_lot"] }
quick_cache = "0.3.0"
rfd = "0.11.4"
zune-core = "0.2.14"
zune-jpeg = "0.3.17"
